@@ -882,11 +882,15 @@
 #define ENABLE_JIT 1
 #endif
 
-/* Enable the DFG JIT on X86 and X86_64.  Only tested on Mac and GNU/Linux.  */
-#if !defined(ENABLE_DFG_JIT) && ENABLE(JIT) \
-    && (CPU(X86) || CPU(X86_64)) \
-    && (PLATFORM(MAC) || OS(LINUX))
+#if !defined(ENABLE_DFG_JIT) && ENABLE(JIT)
+/* Enable the DFG JIT on X86 and X86_64.  Only tested on Mac and GNU/Linux. */
+#if (CPU(X86) || CPU(X86_64)) && (PLATFORM(MAC) || OS(LINUX))
 #define ENABLE_DFG_JIT 1
+#endif
+/* Enable the DFG JIT on ARMv7.  Only tested on iOS. */
+#if CPU(ARM_THUMB2) && PLATFORM(IOS)
+#define ENABLE_DFG_JIT 1
+#endif
 #endif
 
 /* Profiling of types and values used by JIT code. DFG_JIT depends on it, but you
